--- a/index.html
+++ b/index.html
@@ -290,10 +290,9 @@
     </style>
 </head>
 
-<body class="" style="visibility: hidden;">
+<body class="" style="visibility: visible;">
 
 <section id="top_sect" class="second">
-
 
     <h2>Signup</h2>
     <form action="process_signup.php" method="POST">
@@ -308,11 +307,8 @@
 
         <input type="submit" value="Sign Up">
     </form>
-
-
+    
 </section>
-
-
 <section>
     <div id="btn_status" class="hint" style="display: none;">
     </div>
@@ -370,8 +366,6 @@
         platform: <span id="platform"></span>
     </div>
 </section>
-
-
 <div class="viewport-border"></div>
 <div class="viewport-stable_border"></div>
 
